Se añade a la aplicacion, el clima(Lat, Lon)

--- a/README
+++ b/README
@@ -22,4 +22,6 @@
 77. OpenWeather- Informacion del clima 
 - Consumiendo esta Api para obtener el clima, tambien se puede obtener la ubicacion 
 
+78. Se obtiene la informacion del clima del lugar seleccionado
+
 
