Se añade historial y la DB

--- a/README
+++ b/README
@@ -24,4 +24,7 @@
 
 78. Se obtiene la informacion del clima del lugar seleccionado
 
+79. Persistencia en la busquedas por parte de un historial 
+- Primero van las importanciones de node despues la de paquetes de terceros 
+
 
